[gd_scene load_steps=18 format=3 uid="uid://k2awgkbabx7v"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_8gmhn"]
[ext_resource type="Texture2D" uid="uid://dyj04axd7scdn" path="res://Resources/Textures/PLACEHOLDERS/Saul_32_px By June.png" id="2_0gp6m"]
[ext_resource type="Script" path="res://Scripts/player_camera.gd" id="3_kb11e"]
[ext_resource type="AudioStream" uid="uid://cqinx1if47psh" path="res://Resources/Audio/SFX/jump2.wav" id="4_kn1s7"]
[ext_resource type="AudioStream" uid="uid://dpg46pasbhqyu" path="res://Resources/Audio/SFX/jump1.wav" id="5_4b5h4"]
[ext_resource type="AudioStream" uid="uid://bxe2502g4y2iv" path="res://Resources/Audio/SFX/dash.wav" id="5_jppin"]
[ext_resource type="AudioStream" uid="uid://mkt04tcqr0em" path="res://Resources/Audio/SFX/hit_wall.wav" id="6_nryyl"]
[ext_resource type="AudioStream" uid="uid://d4d6pbcnalx0p" path="res://Resources/Audio/SFX/coin_get.wav" id="7_70joa"]
[ext_resource type="AudioStream" uid="uid://ck8td3x687ool" path="res://Resources/Audio/SFX/hitHurt 2.wav" id="8_a4e32"]
[ext_resource type="AudioStream" uid="uid://byyxktqliudlb" path="res://Resources/Audio/SFX/click.wav" id="8_rh76n"]
[ext_resource type="AudioStream" uid="uid://dftb7ej7uoibk" path="res://Resources/Audio/SFX/explosion 3.wav" id="9_o1dav"]
[ext_resource type="AudioStream" uid="uid://dchgcqkkk4n0j" path="res://Resources/Audio/SFX/explosion 1.wav" id="10_kv2jx"]
[ext_resource type="Script" path="res://Scenes/Characters/Saul/hitbox.gd" id="13_g8g5b"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2odja"]
streams_count = 2
stream_0/stream = ExtResource("5_4b5h4")
stream_0/weight = 1.0
stream_1/stream = ExtResource("4_kn1s7")
stream_1/weight = 1.0

[sub_resource type="LabelSettings" id="LabelSettings_klmy4"]
font_size = 12
outline_size = 1
outline_color = Color(0, 0, 0, 1)
shadow_size = 2
shadow_color = Color(0, 0, 0, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_s1gbs"]
size = Vector2(13, 32)

[sub_resource type="CircleShape2D" id="CircleShape2D_0y4iu"]

[node name="Player" type="CharacterBody2D" groups=["Player"]]
script = ExtResource("1_8gmhn")

[node name="Timers" type="Node2D" parent="."]

[node name="CoyoteTimer" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="Timers"]
wait_time = 0.15
one_shot = true

[node name="DashTimer" type="Timer" parent="Timers"]
wait_time = 0.3
one_shot = true

[node name="JustDashed" type="Timer" parent="Timers"]
wait_time = 0.05
one_shot = true
autostart = true

[node name="SlideDelay" type="Timer" parent="Timers"]
wait_time = 0.2
one_shot = true

[node name="TookHit" type="Timer" parent="Timers"]
wait_time = 0.5
one_shot = true

[node name="Detection" type="Node2D" parent="."]

[node name="Right" type="RayCast2D" parent="Detection"]
position = Vector2(0, -5)
target_position = Vector2(14, 0)

[node name="Left" type="RayCast2D" parent="Detection"]
position = Vector2(0, -5)
target_position = Vector2(-15, 0)

[node name="AudioListener2D" type="AudioListener2D" parent="."]
current = true

[node name="SFX" type="Node2D" parent="."]

[node name="Jump" type="AudioStreamPlayer" parent="SFX"]
stream = SubResource("AudioStreamRandomizer_2odja")
volume_db = -6.0

[node name="Dash" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("5_jppin")
volume_db = -6.0

[node name="HitWall" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("6_nryyl")
volume_db = -2.0
pitch_scale = 2.05

[node name="CoinPickup" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("7_70joa")

[node name="Hurt" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_rh76n")
pitch_scale = 1.6

[node name="PiePickup" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_rh76n")

[node name="Hit" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("8_a4e32")
volume_db = -2.0
pitch_scale = 1.5

[node name="HitConfirm" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_o1dav")

[node name="Damage" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("10_kv2jx")
volume_db = -3.0

[node name="GameOver" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("9_o1dav")
volume_db = 1.0
pitch_scale = 0.5

[node name="Score" type="Label" parent="."]
offset_left = -102.0
offset_top = -31.0
offset_right = -56.0
offset_bottom = -8.0
text = "Score: 0"
label_settings = SubResource("LabelSettings_klmy4")

[node name="DashFeedback" type="Label" parent="."]
offset_left = -103.0
offset_top = -16.0
offset_right = -18.0
offset_bottom = 7.0
text = "Dash: "
label_settings = SubResource("LabelSettings_klmy4")

[node name="HealthFeedback" type="Label" parent="."]
offset_left = -102.0
offset_top = -46.0
offset_right = -17.0
offset_bottom = -23.0
text = "Health:"
label_settings = SubResource("LabelSettings_klmy4")

[node name="Label" type="Label" parent="."]
offset_left = -102.0
offset_top = 1.0
offset_right = -62.0
offset_bottom = 24.0
text = "State:"
label_settings = SubResource("LabelSettings_klmy4")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, 0)
shape = SubResource("RectangleShape2D_s1gbs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_0gp6m")

[node name="camera" type="Camera2D" parent="."]
position = Vector2(102, -36)
zoom = Vector2(2, 2)
position_smoothing_enabled = true
position_smoothing_speed = 6.0
drag_horizontal_enabled = true
drag_vertical_enabled = true
drag_left_margin = 0.02
drag_top_margin = 0.29
drag_right_margin = 0.02
drag_bottom_margin = 0.44
editor_draw_drag_margin = true
script = ExtResource("3_kb11e")

[node name="Hitbox" type="Area2D" parent="."]
position = Vector2(15, 0)
monitoring = false
script = ExtResource("13_g8g5b")

[node name="Hit1" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_0y4iu")

[connection signal="timeout" from="Timers/JustDashed" to="." method="_on_just_dashed_timeout"]
[connection signal="timeout" from="Timers/SlideDelay" to="." method="_on_slide_delay_timeout"]
[connection signal="timeout" from="Timers/TookHit" to="." method="_on_took_hit_timeout"]
[connection signal="body_entered" from="Hitbox" to="Hitbox" method="_on_body_entered"]
